<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#80808080"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="#673AB7"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/verify_text"
                    android:textSize="18sp"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/now"
                    android:textStyle="bold"
                    android:background="@drawable/border"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="end"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp"
                    android:layout_margin="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/bank"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>
   </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_details"
                    android:textSize="18sp"
                    android:layout_margin="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/set_a"
                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="10dp"
                     android:fontFamily="sans-serif"
                     android:textStyle="bold"
                    android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:text="@string/set_account"
                     android:backgroundTint="#673AB7"
                     app:cornerRadius="15dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/loan_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apply"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_desc"
                    android:textSize="18sp"
                    android:layout_margin="10dp"/>

                <com.shuhart.stepview.StepView
                    android:id="@+id/step_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:padding="16dp"
                    app:sv_animationType="Line"
                    app:sv_doneCircleColor="#4CAF50"
                    app:sv_doneCircleRadius="12dp"
                    app:sv_doneStepLineColor="#4CAF50"
                    app:sv_doneStepMarkColor="@color/white"
                    app:sv_nextStepLineColor="#000000"
                    app:sv_nextTextColor="#000000"
                    app:sv_selectedCircleColor="#673AB7"
                    app:sv_selectedCircleRadius="12dp"
                    app:sv_selectedStepNumberColor="@color/white"
                    app:sv_selectedTextColor="#673AB7"
                    app:sv_stepLineWidth="1dp"
                    app:sv_stepPadding="4dp"
                    app:sv_stepViewStyle="@style/StepView"
                    app:sv_steps="@array/steps"
                    tools:ignore="MissingClass" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal">
    <com.google.android.material.button.MaterialButton
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/set_account"
        android:backgroundTint="#673AB7"
        app:cornerRadius="15dp"/>
    <com.google.android.material.button.MaterialButton
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/set_account"
        android:backgroundTint="#F44336"
        app:cornerRadius="15dp"/>

</LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/calulator"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calc"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_detail"
                    android:textSize="18sp"
                    android:layout_margin="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:textAllCaps="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/set_account"
                    android:backgroundTint="#673AB7"
                    app:cornerRadius="15dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/update_loan"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updates"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>
            <com.github.hamzaahmedkhan.counteranimationtextview.CountAnimationTextView
                android:id="@+id/user_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="0"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textSize="25sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issued"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="#4CAF50"
                android:layout_marginBottom="10dp"
                android:layout_margin="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/adunitId">
            </com.google.android.gms.ads.AdView>



            </RelativeLayout>



        </LinearLayout>


    </ScrollView>

</LinearLayout>